manifests/Oidc-Server/serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: oidc-server
  namespace: default
spec:
  ports:
  - port: 8443
    targetPort: 8443
  selector:
    app: oidc-server
