manifests/Oidc-Server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oidc-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - oidc-server.example.com
    secretName: oidc-server-tls
  rules:
  - host: oidc-server.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oidc-server
            port:
              number: 8443
